--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,14 @@
 <resources>
 
     <string name="app_name">QuizApp</string>
-    <string name="welcome_xyz_reader">Welcome to XYZ Reader!</string>
+    <string name="welcome_quiz_app">Welcome to quizApp Reader!</string>
 
     <string name="action_refresh">Refresh</string>
     <string name="action_settings">Settings</string>
     <string name="action_share">Share</string>
 
     <string name="up">Up</string>
+
+    <drawable name="header_logo_image" >@drawable/logo_quiz</drawable>
 
 </resources>
