--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,12 @@
 <resources>
 
     <string name="app_name">appQuiz</string>
-    <string name="welcome_quiz_app">Welcome to quizApp Reader!</string>
-
     <string name="action_refresh">Refresh</string>
     <string name="action_settings">Settings</string>
     <string name="action_share">Share</string>
-
+    <string name="sign_in">Sign In</string>
     <string name="up">Up</string>
+    <string name="welcome_quiz_app">Welcome to quizApp Reader!</string>
 
     <drawable name="header_logo_image" >@drawable/logo_quiz</drawable>
 
